# toshokan

./: .gitignore  README.md  pyproject.toml
toshokan/: config.py  game.py  gamefaqs.py  howlongtobeat.py  igdb.py  launchbox.py  main.py  mobygames.py  pcgamingwiki.py  retroachievements.py  steam.py  storage.py  ui.py
