[project]
name = "toshokan"
version = "0.1.0"
description = "Pull information from a variety of sources to create a comprehensive entry for a game"
authors = [
    {name = "Paper Bee",email = "193550979+Paper-Bee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
