[project]
name = "toshokan"
version = "0.1.0"
description = "Pull information from a variety of sources to create a comprehensive entry for a game"
authors = [
    {name = "Paper Bee",email = "193550979+Paper-Bee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "duckduckgo-search (>=7.2.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
